<?xml version="1.0"?>
<package>
  <name>openzen_sensor</name>
  <version>1.0.0</version>
  <description>ROS driver for LP-Research OpenZen</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="lxf@alubi.cn">Feng</maintainer>
  <maintainer email="yap@lp-research.com">H.E. YAP</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>topic_tools</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>

  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>
</package>
